--- a/index.html
+++ b/index.html
@@ -7,6 +7,26 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <form>
+        <label for="">FIRST NAME:</label>
+        <input type="text" placeholder="enter first name">
+        <br>
+        <label for="">LAST NAME:</label>
+        <input type="text">
+        <br>
+        <label for="">EMAIL:</label>
+        <input type="email" placeholder="enter email">
+        <br>
+        <label for="">DATE OF BIRTH:</label>
+        <input type="date">
+        <br>
+        <label for="">PHONE NUMBER:</label>
+        <input type="number" placeholder="+234">
+        <br>
+        <label for="">PASSWORD:</label>
+        <input type="password" placeholder="password">
+        <br>
+        <input type="submit">
+    </form>
 </body>
 </html>
