--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
         <input type="password" placeholder="password">
         <br>
         <input type="submit">
+        <select>
+             <option value="Web track">Web track</option>
+             <option value="AI track">AI track</option>
+             <option value="Game track">Game track</option>
+    </select>
+    &nbsp;
     </form>
 </body>
 </html>
