text area added

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
              <option value="AI track">AI track</option>
              <option value="Game track">Game track</option>
     </select>
-    &nbsp;
     </form>
+    
+    <textarea name="meassage" id="" cols="30" rows="5" placeholder="Comment"></textarea>
 </body>
 </html>
