Radio button added

--- a/index.html
+++ b/index.html
@@ -37,5 +37,14 @@
     <textarea name="meassage" id="" cols="30" rows="5" placeholder="Comment"></textarea>
     <br>
    <button type="submit">login</button>
+   <br>
+   <input type="radio">
+   <label for="html">html</label>
+   <br>
+   <input type="radio">
+   <label for="css">css</label>
+   <br>
+   <input type="radio">
+   <label for="java Script">java script</label>
 </body>
 </html>
