--- a/index.html
+++ b/index.html
@@ -46,5 +46,14 @@
    <br>
    <input type="radio">
    <label for="java Script">java script</label>
+   <br>
+   <input type="checkbox">
+   <label for="html">html</label>
+   <br>
+   <input type="checkbox">
+   <label for="css">css</label>
+   <br>
+   <input type="checkbox">
+   <label for="java Script">java script</label>
 </body>
 </html>
